--- a/pax-cdi-itest-weld/pom.xml
+++ b/pax-cdi-itest-weld/pom.xml
@@ -2,11 +2,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.ops4j.pax</groupId>
-        <artifactId>cdi</artifactId>
+        <groupId>org.ops4j.pax.cdi</groupId>
         <version>0.3.0-SNAPSHOT</version>
+        <artifactId>pax-cdi-parent</artifactId>
+        <relativePath>../pax-cdi-parent</relativePath>
     </parent>
-    <groupId>org.ops4j.pax.cdi</groupId>
     <artifactId>pax-cdi-itest-weld</artifactId>
 
     <name>OPS4J Pax CDI Weld Integration Tests</name>
