--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -16,7 +16,7 @@
         <logback.version>1.0.0</logback.version>
         <openwebbeans.version>1.1.7</openwebbeans.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
-        <pax.exam.version>3.0.0.M4</pax.exam.version>
+        <pax.exam.version>3.0.0.RC1</pax.exam.version>
         <pax.swissbox.version>1.5.1</pax.swissbox.version>
         <pax.url.version>1.5.0</pax.url.version>
         <pax.web.version>3.0.0.M1</pax.web.version>
