--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -75,11 +75,34 @@
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
                         <Require-Capability>
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version>=${version;==;${pax.cdi.osgi.version.clean}})(!(version>=${version;=+;${pax.cdi.osgi.version.clean}})))",
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike.jpa))",
                             osgi.extender; filter:="(osgi.extender=pax.cdi)"
                         </Require-Capability>
-                        <Import-Package>org.apache.deltaspike.jpa.impl.transaction, org.apache.deltaspike.jpa.impl.transaction.context, *</Import-Package>
+                        <Require-Bundle>org.apache.deltaspike.modules.deltaspike-jpa-module-impl</Require-Bundle>
+                        <Import-Package>javax.persistence.criteria, javax.persistence.metamodel, org.apache.deltaspike.jpa.impl.transaction, org.apache.deltaspike.jpa.impl.transaction.context, *</Import-Package>
                     </instructions>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>versions</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>cleanVersions</goal>
+                        </goals>
+                        <configuration>
+                            <versions>
+                                <pax.cdi.osgi.version.clean>${project.version}</pax.cdi.osgi.version.clean>
+                            </versions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>generate-manifest</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
