--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -13,7 +13,7 @@
     <name>OPS4J Pax CDI Parent POM</name>
 
     <properties>
-        <deltaspike.version>1.4.2-SNAPSHOT</deltaspike.version>
+        <deltaspike.version>1.4.2</deltaspike.version>
         <guava.version>13.0.1</guava.version>
         <jersey.version>1.13</jersey.version>
         <jetty.version>9.0.7.v20131107</jetty.version>
