--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -31,7 +31,7 @@
         <pax.web.version>4.0.0</pax.web.version>
 
         <slf4j.version>1.6.4</slf4j.version>
-        <weld2.version>2.2.14.Final</weld2.version>
+        <weld2.version>2.3.0.Final</weld2.version>
         <xbean.version>4.3</xbean.version>
 
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
@@ -335,6 +335,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.16</version>
                     <executions>
                         <execution>
                             <id>verify-style</id>
