--- a/itest/src/it/itest-karaf/pom.xml
+++ b/itest/src/it/itest-karaf/pom.xml
@@ -14,7 +14,9 @@
     <name>OPS4J Pax CDI 1.2 Integration Tests on Karaf</name>
 
     <properties>
-        <karaf.version>3.0.3</karaf.version>
+        <karaf.version>3.0.6</karaf.version>
+        <!-- Version packaged with Karaf 3.0.6-->
+        <felix.version>4.2.1</felix.version>
     </properties>
 
     <dependencies>
@@ -296,7 +298,7 @@
                 <dependency>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>org.apache.felix.framework</artifactId>
-                    <version>4.6.0</version>
+                    <version>${felix.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
