--- a/itest/src/it/itest-standalone/pom.xml
+++ b/itest/src/it/itest-standalone/pom.xml
@@ -15,6 +15,10 @@
 
     <description>These tests use a stand-alone OSGi 4.3 framework (as opposed to Karaf).</description>
 
+    <properties>
+        <felix.version>4.6.0</felix.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -502,7 +506,7 @@
                 <dependency>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>org.apache.felix.framework</artifactId>
-                    <version>4.0.3</version>
+                    <version>${felix.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
