--- a/itest/src/it/itest-karaf/src/test/resources/logging.properties
+++ b/itest/src/it/itest-karaf/src/test/resources/logging.properties
@@ -1,4 +1,11 @@
-handlers = org.slf4j.bridge.SLF4JBridgeHandler
+#handlers = org.slf4j.bridge.SLF4JBridgeHandler
 #handlers=java.util.logging.ConsoleHandler
-org.slf4j.bridge.SLF4JBridgeHandler.level = FINEST
+#org.slf4j.bridge.SLF4JBridgeHandler.level = FINEST
 
+log4j.rootCategory=INFO, stdout
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout.ConversionPattern=%p [%c] - %m%n
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+
+log4j.logger.org.ops4j.pax.cdi.extension = DEBUG
