--- a/pax-cdi-api/pom.xml
+++ b/pax-cdi-api/pom.xml
@@ -58,6 +58,11 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
+                        <Import-Package>
+                            javax.enterprise.*; version="[1,3)",
+                            javax.decorator.*; version="[1,3)",
+                            *
+                        </Import-Package>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                     </instructions>
                 </configuration>
