--- a/pax-cdi-extender/pom.xml
+++ b/pax-cdi-extender/pom.xml
@@ -84,6 +84,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
+                            javax.enterprise.*; version="[1,3)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
