--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -86,6 +86,8 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
+                            javax.enterprise.*; version="[1,3)",
+                            javax.decorator.*; version="[1,3)",
                             org.osgi.framework;version="[1.7,2)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
