--- a/pax-cdi-spi/pom.xml
+++ b/pax-cdi-spi/pom.xml
@@ -74,6 +74,8 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
+                            javax.enterprise.*; version="[1,3)",
+                            javax.decorator.*; version="[1,3)",
                             org.apache.xbean*;version="[3.18,5)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
