--- a/pax-cdi-weld/pom.xml
+++ b/pax-cdi-weld/pom.xml
@@ -77,7 +77,9 @@
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
                         <Import-Package>
-                            org.jboss.weld.*; version="[1,3)",
+                            javax.enterprise.*; version="[1,3)",
+                            javax.decorator.*; version="[1,3)",
+                            org.jboss.weld.*; version="[1,4)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
