--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.0.4</version>
             <scope>provided</scope>
         </dependency>
 
