--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -128,6 +128,13 @@
             <artifactId>easymock</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.karaf.bundle</groupId>
+            <artifactId>org.apache.karaf.bundle.core</artifactId>
+            <version>4.0.4</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
@@ -142,10 +149,11 @@
                             org.osgi.framework;version="[1.7,2)",
                             org.osgi.framework.wiring;version="[1.1,2)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
+                            org.apache.karaf.bundle.core;version="[3,5)";resolution:=optional,
                             *
                         </Import-Package>
                         <Export-Package>
-                            org.ops4j.pax.cdi.extension.api
+                            org.ops4j.pax.cdi.extension.api*
                         </Export-Package>
                         <Private-Package>
                             org.osgi.util.function,
@@ -162,6 +170,9 @@
                             org.ops4j.pax.cdi.extension; extension=pax-cdi-extension;
                             version:Version=${version;====;${replace;${project.version};-;.}}
                         </Provide-Capability>
+                        <Bundle-Activator>
+                            org.ops4j.pax.cdi.extension.impl.osgi.Activator
+                        </Bundle-Activator>
                     </instructions>
                 </configuration>
             </plugin>
