--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -352,6 +352,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
+                    <version>3.2.0</version>
                     <extensions>true</extensions>
                     <configuration>
                         <unpackBundle>true</unpackBundle>                
